# browser-translator

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  extension  pyproject.toml  requirements.txt
backend/: __init__.py  audio_pipeline.py  audio_system.py  cli.py  config.py  main.py  nllb_translator.py  ocr_pipeline.py  stt_engine.py  translation.py
backend/extension/: background.js  content.css  content.js  manifest.json  offscreen.html  offscreen.js  popup.html  popup.js
extension/: background.js  content.js  manifest.json  popup.html  popup.js  styles.css
scripts/: install.sh  launch_chrome.sh  start.sh  stop.sh
