[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "browser-translator"
version = "1.3.2"
description = "Local AI-powered speech-to-text translation & OCR page translation (faster-whisper)"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Mavis", email = "taquanvku@gmail.com" },
]
requires-python = ">=3.10"
keywords = ["translation", "ai", "local", "speech", "ocr", "browser"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "uvicorn>=0.27",
    "fastapi>=0.100",
    "pydantic>=2.0",
    "faster-whisper>=1.1",
    "pydub>=0.25,<0.26",
    "aiohttp>=3.9",
    "websockets>=12.0",
]

[project.optional-dependencies]
ocr = [
    "paddleocr>=3.7",
    "paddlepaddle>=3.0",
]
tts = [
    "moonshine-voice>=0.0.62",
    "piper-tts>=1.2.0",
]
nllb = [
    "ctranslate2>=4.0",
    "sentencepiece>=0.2",
    "torch>=2.0",
    "transformers>=4.30",
]

[project.urls]
Homepage = "https://github.com/Mavis2103/browser-translator"
Repository = "https://github.com/Mavis2103/browser-translator"

[project.scripts]
browser-translator = "backend.cli:main"

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.setuptools.package-data]
backend = ["py.typed", "extension/**/*"]
